fix spacing issue for qae comments. Reduce spacing between information h3 and top of its container.

--- a/src/components/Office/EvaluationReportTable/EvaluationReportContainer.module.scss
+++ b/src/components/Office/EvaluationReportTable/EvaluationReportContainer.module.scss
@@ -78,6 +78,9 @@
   @include u-radius('05');
   @include u-border('base-lighter');
   @include u-border('1px');
+  h3 {
+    @include u-margin-top(1);
+  }
 }
 
 .shipmentDisplayContainer {
@@ -91,7 +94,11 @@
 }
 
 .qaeRemarks {
-  width: 100%;
+  width: 75%;
+}
+
+.qaeRemarksLabel {
+  width: 25%;
 }
 
 .titleSection {
